# SDFEdit

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
doc/: project.bib  project.tex
resources/scenes/: basic_scene.json  chess_board.json  knight_test.json  mushed.json
resources/shaders/: axis.fs  axis.vs  brick.fs  brick.gs  brick.vs  evaluate_geometry.comp  model.fs  model.gs  model.vs  model_fill_brick.fs  node.fs  node.gs  node.vs  ray_march.fs  screen_quad.vs  sdf_brick.fs  sdf_brick.vs
resources/shaders/vso/: evaluate_brick.comp  init_new_level_nodes.comp  top_down_construction.comp
src/: Gui.cpp  Gui.h  Renderer.cpp  Renderer.h  SceneLoader.cpp  SceneLoader.h  Updater.cpp  Updater.h  evaluator.cpp  evaluator.h  main.cpp  renderer.cpp  renderer.h  updater.cpp  updater.h
src/components/: AppState.h  ElementPoolBehavior.h  GeometryEvaluator.cpp  GeometryEvaluator.h  GeometryPool.cpp  GeometryPool.h  ModelPool.h  SceneRenderer.cpp  SceneRenderer.h  geometryEvaluation.cpp  geometryEvaluation.h  renderer.cpp  updater.cpp
src/data/: AABB.cpp  AABB.h  AppState.h  BrickPool.cpp  BrickPool.h  ItemPoolBehavior.h  Model.h  SVOctree.cpp  SVOctree.h  Scene.h  Transform.h  geometry.cpp  geometry.h  model.h  primitives.h
src/systems/: GeometryEvaluator.cpp  GeometryEvaluator.h  RandomMovementTestBench.cpp  RandomMovementTestBench.h  System.h
src/types/: AABB.cpp  AABB.h  AppState.h  EvaluatedGeometry.h  GeometryPool.h  ModelPool.h  geometry.cpp  geometry.h  model.h  primitives.h  scene.h  transform.h  volume.h
src/visualization/: AxisVT.cpp  AxisVT.h  ModelVT.cpp  ModelVT.h  OctreeVT.cpp  OctreeVT.h  OctreeWireframeVT.cpp  OctreeWireframeVT.h  SingleVolumeBrickVT.cpp  SingleVolumeBrickVT.h  VisualizationTechnique.h
